# GamePack

./: .flake8  .gitattributes  .pre-commit-config.yaml  AGENTS.md  DiceParser.py  FenCharacter.py  Item.py  MDPack.py  PBTACharacter.py  PBTAItem.py  README.md  WikiCharacterSheet.py  WikiPage.py  __init__.py  fasthelpers.py  fengraph.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Validate.yml  publish.yml
Parser/: Dice.interp  DiceLexer.interp  DiceLexer.py  DiceLexer.tokens  DiceListener.py  DiceParser.py  DiceVisitor.py
Processor/: Dice.g4  DiceProcessor.py  Nodes.py  Resolver.py
data/: __init__.py
docs/: Code_Quality.md  DiceParser_Implementation.md  MDPack_Behaviors.md
gamepack/: Armor.py  BaseCharacter.py  BaseCharacter.pyi  Calc.py  Calc.pyi  Cards.py  Dice.py  Dice.pyi  DiceExpressionParser.py  DiceExpressionParser.pyi  DiceLexer.py  DiceLexer.pyi  DiceParser.py  DiceParser.pyi  EWCharacter.py  EnergySystem.pyi  FenCharacter.py  FenCharacter.pyi  HeatSystem.pyi  Item.py  Item.pyi  ItemBase.py  ItemBase.pyi  ItemProtocol.py  ItemProtocol.pyi  MDPack.py  MDPack.pyi  Mecha.py  Mecha.pyi  NewDice.py  NewDice.pyi  OffensiveSystem.pyi  PBTACharacter.py  PBTACharacter.pyi  PBTAItem.py  PBTAItem.pyi  RegexRouter.py  RegexRouter.pyi  SealSystem.pyi  System.pyi  (+11 more)
gamepack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gamepack/data/: __init__.py  dicecache  dicecache.sqlite
gamepack/endworld/: EWCharacter.py  EWCharacter.pyi  EnergySystem.py  HeatSystem.py  Mecha.py  MovementSystem.py  MovementSystem.pyi  OffensiveSystem.py  OffensiveSystem.pyi  SealSystem.py  System.py  __init__.py  __init__.pyi
scripts/: gen-stubs.sh
tests/: test_Calc.py  test_Dice.py  test_DiceExpressionParser.py  test_DiceParser.py  test_DiceProcessor.py  test_EWCharacter.py  test_FenCharacter.py  test_HeatFormat.py  test_Items.py  test_MDObj.py  test_Mecha.py  test_NewDice.py  test_PBTACharacter.py  test_Wiki.py  test_WikiCharacterSheet.py  test_WikiPage.py  test_chr.md  test_fasthelpers.py  test_fengraph.py  test_independency.py
