[project]
dependencies = [
    "pyyaml>=6.0.3",
    "numpy>=2.2.6",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
    "bleach>=6.3.0",
    "gitpython>=3.1.45",
    "beautifulsoup4>=4.14.2",
    "ply>=3.11",
]
license = "GPL-3.0-or-later"
name = "gamepack"
version = "0.2.3"
requires-python = ">=3.14"
description = "factored out game related stuff from NossiNet"
authors = [{ name = "Maric", email = "x4dr@hotmail.com" }]
readme = "README.md"
keywords = ["game", "package"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Internal",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
]

[tool.bumpversion]
current_version = "0.2.3"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.setuptools.packages.find]
include = ["gamepack*"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
