[project]
dependencies = [
    "pyyaml>=6.0.3",
    "numpy>=2.2.6",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
    "bleach>=6.3.0",
    "gitpython>=3.1.45",
    "beautifulsoup4>=4.14.2",
    "ply>=3.11",
]
license = "GPL-3.0-or-later"
name = "gamepack"
version = "0.2.3"
requires-python = ">=3.14"
description = "factored out game related stuff from NossiNet"
authors = [{ name = "Maric", email = "x4dr@hotmail.com" }]
readme = "README.md"
keywords = ["game", "package"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Internal",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
]

[tool.bumpversion]
current_version = "0.2.3"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.setuptools.packages.find]
include = ["gamepack*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
# PLY grammar rules use docstrings as grammar specifications.
# D400/D415 would add trailing periods to docstrings, but in PLY
# a period is valid grammar syntax (e.g. "NUMBER." means a symbol
# named "NUMBER" followed by end-of-rule marker), not prose.
# Dot *inside* a string-like grammar symbol would break PLY.
# https://ply.readthedocs.io/en/latest/ply.html#grammar-rules
"gamepack/DiceExpressionParser.py" = ["D400", "D415"]
"gamepack/DiceLexer.py" = ["D400", "D415"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.15.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.black]
line-length = 120
